[gd_scene load_steps=5 format=3 uid="uid://b22aoofe6tgy4"]

[ext_resource type="Script" path="res://Scripts/startScreen.gd" id="1_hos0j"]
[ext_resource type="FontFile" uid="uid://d0tncuiek8mtd" path="res://Assets/UI/Pixellari.ttf" id="2_ekyuc"]
[ext_resource type="Texture2D" uid="uid://chpu63rwo0vtk" path="res://Assets/UI/startScreen.png" id="2_nagki"]
[ext_resource type="AudioStream" uid="uid://hs7grbiuo7m1" path="res://Assets/Souds/Gentle Breeze.ogg" id="4_rowx8"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_hos0j")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nagki")

[node name="start" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 92.0
offset_right = 115.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.929412, 0.662745, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.982646, 0.744408, 0.386683, 1)
theme_override_fonts/font = ExtResource("2_ekyuc")
theme_override_font_sizes/font_size = 30
text = "COMEÃ‡AR"
flat = true

[node name="newGame" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 148.0
offset_right = 118.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.929412, 0.662745, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.982646, 0.744408, 0.386683, 1)
theme_override_fonts/font = ExtResource("2_ekyuc")
theme_override_font_sizes/font_size = 30
text = "NOVO JOGO"
flat = true

[node name="quit" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 210.0
offset_right = 115.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.929412, 0.662745, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.982646, 0.744408, 0.386683, 1)
theme_override_fonts/font = ExtResource("2_ekyuc")
theme_override_font_sizes/font_size = 30
text = "SAIR"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rowx8")
autoplay = true

[connection signal="pressed" from="TextureRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TextureRect/newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="TextureRect/quit" to="." method="_on_quit_pressed"]
